--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency folders
 node_modules
+frontend/node_modules/
+backend/node_modules/
+
+# Build outputs
 dist
 dist-ssr
+frontend/dist/
+
+# Env files
+.env
+frontend/.env
+backend/.env
+
+# Local config
 *.local
 
-.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
